# chatsync

./: README.md  chatsync-example.yaml  pyproject.toml
chatsync/: __init__.py  chatsync.py
chatsync/providers/: gitter.py  irc.py  matrix.py  slack.py
